[profile.release]
#debug = true
strip = true
opt-level = "z"
lto = true

[package]
name = "refact-lsp"
version = "0.10.11"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["vecdb"]
vecdb = ["arrow", "arrow-array", "arrow-schema", "lance", "vectordb"]

[build-dependencies]
shadow-rs = "0.36.0"

[dependencies]
sled = { version = "0.34", default-features = false, features = [] }
# all features = ["compression", "docs", "event_log", "failpoints", "io_uring", "lock_free_delays", "measure_allocs", "miri_optimizations", "mutex", "no_inline", "no_logs", "pretty_backtrace", "testing"]
shadow-rs = { version = "0.36.0", features = [], default-features = false }
hyper = { version = "0.14", features = ["server", "stream"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls-webpki-roots", "charset", "http2"] }
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "rt-multi-thread", "signal", "process"] }
reqwest-eventsource = "0.6.0"
url = "2.4.1"
serde = { version = "1", features = ["rc", "derive"] }
serde_json = {version = "1", features = ["preserve_order"]}
serde_yaml = "0.9.31"
serde_cbor = "0.11.2"
tower = { version = "0.4", features = ["full"] }
tower-lsp = "0.20"
tower-http = { version = "0.4.0", features = ["cors"] }
tower-layer = "0.3.2"
tracing = "0.1"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokenizers = "0.20"
ropey = "1.6"
home = "0.5"
structopt = "0.3"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
async-stream = "0.3.5"
chrono = "0.4.31"
regex = "1.9.5"
async-trait = "0.1.73"
similar = "2.3.0"
axum = "0.6.20"
uuid = { version = "1", features = ["v4", "serde"] }
lazy_static = "1.4.0"
html2text = "0.12.5"
select = "0.6.0"
indexmap = {version = "1.9.1", features = ["serde-1"]}
textwrap = "0.14"

regex-automata = { version = "0.1.10", features = ["transducer"] }
sorted-vec = "0.8.3"
tree-sitter = "0.22"
tree-sitter-cpp = "0.22"
#tree-sitter-c-sharp = "0.20"
tree-sitter-java = "0.21"
tree-sitter-javascript = "0.21"
#tree-sitter-kotlin = "0.3.1"
tree-sitter-python = "0.21"
tree-sitter-rust = "0.21"
tree-sitter-typescript = "0.21"

arrow = { version = "47.0.0", optional = true }
arrow-array  = { version = "47.0.0", optional = true }
arrow-schema = { version = "47.0.0", optional = true }
lance = { version = "=0.9.0", optional = true, default-features = false }
vectordb = { version = "=0.4.0", optional = true, default-features = false }

async_once= "0.2.6"
async-process = "2.0.1"
diff = "0.1.13"
itertools = "0.11.0"
log = "0.4.20"
md5 = "0.7"
mockito = "0.28.0"
notify = { version = "6.1.1", features = ["serde"] }
parking_lot = { version = "0.12.1", features = ["serde"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
tempfile = "3.8.1"
time = "0.3.20"            # "0.3.30" conflicts for some reason
tokio-rusqlite = "0.5.0"
tokio-util = { version = "0.7.12", features = ["compat"] }
walkdir = "2.3"
which = "5.0.0"
strsim = "0.8.0"
typetag = "0.2"
dyn_partial_eq = "=0.1.2"
rayon = "1.8.0"
backtrace = "0.3.71"
rand = "0.8.5"
hashbrown = "0.14"
shell-words = "1.1.0"
sha2 = "0.10.8"
glob = "0.3.1"
base64 = "0.22.1"
image = "0.25.2"
headless_chrome = "1.0.15"
nix = { version = "0.29.0", features = ["signal"] }
resvg = "0.44.0"
async-tar = "0.5.0"
git2 = "0.19.0"
process-wrap = { version = "8.0.2", features = ["tokio1"] }
rust-embed = "8.5.0"
jsonrpc_client = { version = "0.7.1", features = ["reqwest"] }
#mcp_client_rs = "0.1.5"
#mcp-client-rs = { git = "https://github.com/tim-schultz/mcp-client-rs.git" }
#anyhow = "1.0.95"
#mcp_rust_sdk = "0.1.0"
#mcp_client_rust = { git = "https://github.com/darinkishore/mcp_client_rust" }
mcp_client_rs = { path = "../mcp_client_rust" }

