[profile.release]
#debug = true
strip = true
opt-level = "z"
lto = true

[package]
name = "refact-lsp"
version = "0.10.19"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["vecdb"]
vecdb = ["sqlite-vec"]

[build-dependencies]
shadow-rs = "1.1.0"

[dependencies]
astral-tokio-tar = "0.5.2"
axum = { version = "0.6.20", features = ["default", "http2"] }
async-process = "2.0.1"
async-stream = "0.3.5"
async-trait = "0.1.73"
backtrace = "0.3.71"
base64 = "0.22.1"
chrono = { version = "0.4.31", features = ["serde"] }
diff = "0.1.13"
dunce = "1.0.5"
dyn_partial_eq = "=0.1.2"
futures = "0.3"
git2 = "0.20.2"
glob = "0.3.1"
hashbrown = "0.15.2"
headless_chrome = "1.0.16"
home = "0.5"
html2text = "0.12.5"
hyper = { version = "0.14", features = ["server", "stream"] }
image = "0.25.2"
indexmap = { version = "1.9.1", features = ["serde-1"] }
itertools = "0.14.0"
lazy_static = "1.4.0"
libsqlite3-sys = "0.28.0"
log = "0.4.20"
md5 = "0.7"
notify = { version = "8.0.0", features = ["serde"] }
parking_lot = { version = "0.12.1", features = ["serde"] }
process-wrap = { version = "8.0.2", features = ["tokio1"] }
rand = "0.8.5"
rayon = "1.8.0"
regex = "1.9.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls-webpki-roots", "charset", "http2"] }
reqwest-eventsource = "0.6.0"
resvg = "0.44.0"
ropey = "1.6"
rusqlite = { version = "0.31.0", features = ["bundled"] }
rust-embed = "8.5.0"
percent-encoding = "2.3"
serde = { version = "1", features = ["rc", "derive"] }
serde_cbor = "0.11.2"
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9.31"
# all features = ["compression", "docs", "event_log", "failpoints", "io_uring", "lock_free_delays", "measure_allocs", "miri_optimizations", "mutex", "no_inline", "no_logs", "pretty_backtrace", "testing"]
shadow-rs = { version = "1.1.0", features = [], default-features = false }
sha2 = "0.10.8"
shell-words = "1.1.0"
shell-escape = "0.1.5"
select = "0.6.0"
similar = "2.3.0"
sled = { version = "0.34", default-features = false, features = [] }
sqlite-vec = { version = "0.1.6", optional = true }
strsim = "0.11.1"
structopt = "0.3"
tempfile = "3.8.1"
tokenizers = "0.21.0"
tokio = { version = "1.43.0", features = ["fs", "io-std", "io-util", "macros", "rt-multi-thread", "signal", "process"] }
tokio-rusqlite = "0.5.0"
tokio-util = { version = "0.7.12", features = ["compat"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors"] }
tower-lsp = "0.20"
tracing = "0.1"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tree-sitter = "0.22"
tree-sitter-cpp = "0.22"
tree-sitter-java = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-python = "0.21"
tree-sitter-rust = "0.21"
tree-sitter-typescript = "0.21"
typetag = "0.2"
url = "2.4.1"
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2.3"
which = "7.0.1"
zerocopy = "0.8.14"

# There you can use a local copy
# rmcp = { path = "../../../rust-sdk/crates/rmcp/", "features" = ["client", "transport-child-process", "transport-sse"] }
rmcp = { git = "https://github.com/smallcloudai/rust-sdk", branch = "cleanup-zombie-processes-for-child-process-client", features = ["client", "transport-child-process", "transport-sse"] }